# lawsuite

./: .gitignore  DEPLOY.md  RENDER_DEPLOYMENT.md  admin.py  deploy.yml  railway.toml  render.yaml
backend/: .dockerignore  Dockerfile  Makefile  README.md  README_Old.md  __init__.py  alembic.ini  billing_err.txt  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml  report.html  test_error.txt
backend/alembic/: env.py
backend/alembic/versions/: 17a92647cfd4_add_client_invoicing_module.py  18ded1ca8f17_add_reports_table.py  1f02534011e9_add_oauth_mfa_and_trial_fields.py  5c77fc9ce9e7_add_password_reset_fields.py  7ee105f193ae_add_report_filters.py  8be959945cd2_add_audit_log_and_idempotency_keys.py  98008db5357e_add_paystack_subscription_code.py  98d00303a6e7_add_user_notification_email_preferences.py  a1b2c3d4e5f6_add_task_comments_and_watchers.py  a682896aa820_initial_schema.py  a7b8c9d0e1f2_add_matter_type_categories.py  b1a16dd30339_add_billing_transactions_ledger_and_.py  b2c3d4e5f6a7_add_notifications_table.py  bff5a88755e8_phase_1_initial_schema.py  c4d5e6f7a8b9_add_calendar_events_and_matter_notes.py  c760360dde17_rebuild_schema.py  d1e2f3a4b5c6_make_matter_notes_matter_id_nullable.py  dd7e7dfeb441_merge_heads.py  e5f6a7b8c9d0_add_task_attachments.py  f1a2b3c4d5e6_add_archived_task_status.py  f6323dfbf99b_add_trial_and_feature_flags.py  f953df00b430_rename_stripe_customer_id_to_paystack_.py
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  audit_logs.py  auth.py  billing.py  calendar.py  clients.py  disbursements.py  documents.py  fee_arrangements.py  integrations.py  invoice_payments.py  invoices.py  matters.py  notes.py  notifications.py  reports.py  search.py  tasks.py  webhooks.py
backend/app/core/: config.py  database.py  deps.py  security.py  upload_validation.py
backend/app/models/: __init__.py  activity_log.py  audit_log.py  billing_transaction.py  calendar_event.py  client.py  disbursement.py  fee_arrangement.py  invoice.py  invoice_line_item.py  matter.py  matter_document.py  matter_note.py  note.py  notification.py  organisation.py  payment.py  report.py  rls.py  task.py  task_comment.py  task_document_link.py  task_watcher.py  user.py
backend/app/schemas/: audit_log.py  auth.py  calendar.py  client.py  disbursement.py  document.py  fee_arrangement.py  invoice.py  matter.py  note.py  payment.py  report.py  task.py
backend/app/services/: activity_service.py  (+26 more)
backend/e2e/: README.md  conftest.py  test_clients.py  test_landing_page.py  test_matters.py  test_tasks.py
backend/scripts/: Makefile  diagnose.py  seed.py  setup_local_rls_role.sql  setup_supabase_rls_role.sql
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_billing.py  test_calendar.py  test_clients.py  test_disbursements.py  test_docs.py  test_document_permissions.py  test_documents.py  test_email_service.py  test_fee_arrangements.py  test_gmail.py  test_google_signin.py  test_idempotency_and_deletes.py  test_integrations.py  test_invoice_payments.py  test_invoices.py  test_matters.py  test_mfa.py  test_reports.py  test_rls_enforcement.py  test_role_permissions.py  test_scheduled_email_tasks.py  test_tasks.py  test_tax_engine.py  test_upload_validation.py
(+116 files in other folders)
